--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Abhirav Kumar",
   "license": "MIT",
   "dependencies": {
-    "mongoose": "5.7.1"
+    "mongoose": "5.7.1",
+    "express": "^4.17.1"
   }
 }
