--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Abhirav Kumar",
   "license": "MIT",
   "dependencies": {
-    "mongoose": "5.7.1",
-    "express": "^4.17.1"
+    "mongoose": "5.7.4",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
   }
 }
